syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "ContentDocumentExtraProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// Document
message DocumentData {
    option (routines.entity_type) = "Document";
    option (routines.keys).keys = "document_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: documentId
    // fields
    string document_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string document_type_id = 2 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp date_created = 3 [(routines.opts).field_type = "date-time"];
    string comments = 4 [(routines.opts).field_type = "comment"];
    string document_location = 5 [(routines.opts).field_type = "long-varchar"];
    string document_text = 6 [(routines.opts).field_type = "long-varchar"];
    bytes image_data = 7 [(routines.opts).field_type = "object"];
    google.protobuf.Timestamp last_updated_tx_stamp = 8 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 9 [(routines.opts).field_type = "date-time"];
    string tenant_id = 10 [(routines.opts).field_type = "id"];
            
             

    // extra
    google.protobuf.Struct extra = 16;
    map<string, google.protobuf.Any> attachments = 17;
}


message DocumentKey{
    string document_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message DocumentList{
    repeated DocumentData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListDocuments` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Document Attribute
message DocumentAttributeData {
    option (routines.entity_type) = "DocumentAttribute";
    option (routines.keys).keys = "document_id, attr_name";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: documentId, attrName
    // fields
    string document_id = 1 [(routines.opts).field_type = "id"];
    string attr_name = 2 [(routines.opts).field_type = "id-long"];
    string attr_value = 3 [(routines.opts).field_type = "value"];
    string attr_description = 4 [(routines.opts).field_type = "description"];
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    string id = 7 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 10;
    map<string, google.protobuf.Any> attachments = 11;
}


message DocumentAttributeKey{
    string document_id = 1 [(routines.opts).field_type = "id"];
    string attr_name = 2 [(routines.opts).field_type = "id-long"];
}

message DocumentAttributeList{
    repeated DocumentAttributeData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListDocumentAttributes` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Document Type Attribute
message DocumentTypeAttrData {
    option (routines.entity_type) = "DocumentTypeAttr";
    option (routines.keys).keys = "document_type_id, attr_name";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: documentTypeId, attrName
    // fields
    string document_type_id = 1 [(routines.opts).field_type = "id"];
    string attr_name = 2 [(routines.opts).field_type = "id-long"];
    string description = 3 [(routines.opts).field_type = "description"];
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    string id = 6 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 10;
    map<string, google.protobuf.Any> attachments = 11;
}


message DocumentTypeAttrKey{
    string document_type_id = 1 [(routines.opts).field_type = "id"];
    string attr_name = 2 [(routines.opts).field_type = "id-long"];
}

message DocumentTypeAttrList{
    repeated DocumentTypeAttrData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListDocumentTypeAttrs` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


